<resources>
    <string name="version_name">1.0</string>
    <string name="app_name">PiGrid Companion</string>
    <string name="title_pie_list">PiGrid Devices</string>

    <!-- for Welcome Activity -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="reset">RESET</string>
    <string name="cancel">Cancel</string>


    <!-- for Menus -->
    <string name="discover_pi">Discover Pi</string>
    <string name="shop">PiGrid Shop</string>
    <string name="supplier">Pi Supply</string>
    <string name="pigrid_help">PiGrid Help</string>
    <string name="app_help">App Help</string>
    <string name="settings">Setting</string>
    <string name="about_app">About App</string>
    <string name="manual_search">Manual Search</string>

    <string name="manual_search_pi">Connect</string>

    <string name="home_text"> Discover and connect device available in your network! </string>
    <string name="no_device"> There is no any required device in the network </string>
    <string name="search_device"> Search devices </string>

    <string name="slide_1_title">Hello PiGrid Users!</string>
    <string name="slide_1_desc">With this PiGrid Companion app you will be able to find and control your PiGrid device/s easily and comfortably via your Smartphone or Tablet.</string>

    <string name="slide_2_title">Connect</string>
    <string name="slide_2_desc">The integrated detection function automatically finds your PiGrid device in your Wi-Fi and LAN network.</string>

    <string name="slide_3_title">Manual Connect</string>
    <string name="slide_3_desc">Connect to the PiGrid device manually with ip address in your Wi-Fi and LAN network. </string>

    <string name="slide_4_title">Control</string>
    <string name="slide_4_desc">Take full control of your PiGrid device and manage your wallet, research and device settings.</string>

    <string name="reset_msg"> Your application has been Reset ! </string>

    <string name="title_activity_fullscreen">Pi Detail</string>
    <string name="back"> Back </string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PiGrid Companion</string>
    <string name="nav_header_subtitle">info@blocklink.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no_data_available">No Pi Devices Found on Your Wi-Fi and LAN Network. Please click search button again to rescan the Wi-Fi. </string>
    <string name="reset_message"> Use the button below to reset this app. By resetting this app you will be able to see the Welcome slider message again</string>

    <string name="version"> Version:  1.4 </string>
    <string name="about_text">Developed By: \n blocklink AG\n Universitätsstr. 3, 56070 Koblenz \n Phone: +49 (0) 159 02283941\n Email: info@blocklink.de \nWebsite: blocklink.de</string>

    <string name="about_app_text"> PiGrid software was developed to enable easy access to the world of the virtual currency Gridcoin and the open-source research platform BOINC.
        It combines the features of a Gridcoin wallet and a BOINC client. As an all-in-one solution, it will take care of handling your cryptocurrency assets and at the same time enable
        you to participate in international research and distributed computing projects. Use our PiGrid Software on your Raspberry Pi to become a paid home-based researcher and
        cryptocurrency user. \n \n

        This app is developed for the PiGrid users who are using Pigrid software on Raspberry Pi. They can reach to their Pi devices via this app if they are connected to the same Wi-Fi or LAN network.
        It allows access to the interface of the Pigrid software.

    </string>

    <!-- for Pie List Fragments -->
    <string name="searching_pi">Searching Pi...</string>
    <string name="connection_lost">Device Wi-Fi connection lost</string>
    <string name="wifi_connected">Device connected to the Wi-Fi network</string>
    <string name="data_connected">Device connected to the mobile network. Please connect to the Wi-Fi network to discover the Pi</string>
    <string name="connect_message">Connect your device to the Wi-Fi network to discover the Pi</string>
    <string name="failed_pi">Something went wrong when searching for the pi.</string>

    <string name="page_load_error">Error occurred while loading the page!!</string>
    <string name="manual_search_msg">Hello PiGrid User!\nYou can use this form to connect a PiGrid device in your network if you already know the ip address of it.</string>

    <string name="manual_search_et_placeholder">PiGrid device\'s IP</string>
    <string name="manual_search_vmsg1">Please enter the ip address of your PiGrid device.</string>
    <string name="manual_search_vmsg2">Please enter the valid ip address of your PiGrid device.</string>

</resources>
